<resources>
    <string name="app_name">Pokemon</string>
    <string name="pokemon_name">pokemon name</string>
    <string name="back">back</string>
    <string name="menu">menu</string>
    <string name="pockdex">Pockedex</string>
    <string name="like">Like</string>
    <string name="base_stats">Base Stats</string>
    <string name="about">About</string>
    <string name="evolution">Evolution</string>
    <string name="moves">Moves</string>
    <string name="species">Species</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="abilities">Abilities</string>
    <string name="attack">Attack</string>
    <string name="hp">HP</string>
    <string name="defence">Defence</string>
    <string name="sp_attack">Sp. attack</string>
    <string name="sp_defence">Sp. Defence</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="_00">00</string>
</resources>