<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.PokemonListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_margin="10sp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_margin="10sp"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_baseline_menu_24"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/pockdex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_layout"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemonListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="10sp"
        app:layoutManager="GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:spanCount="2"
        tools:listitem="@layout/pokemon_small_card" />
</androidx.constraintlayout.widget.ConstraintLayout>