<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.PokemonDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:background="@color/blue_card_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:alpha="0.3"
                android:src="@drawable/pokeball_translucent"
                android:translationX="10sp"
                android:translationY="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="36sp"
                    android:layout_height="36sp"
                    android:layout_margin="10sp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/like_button"
                    android:layout_width="36sp"
                    android:layout_height="36sp"
                    android:layout_margin="10sp"
                    android:contentDescription="@string/like"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/pokemonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:text="@string/pokemon_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_bar_layout" />

            <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_marginTop="100sp"
                android:elevation="10sp"
                android:src="@drawable/pokeball"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="250sp"
                android:layout_marginBottom="20sp"
                app:cardCornerRadius="50sp"
                app:cardElevation="5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:minHeight="300sp">

                    <HorizontalScrollView
                        android:id="@+id/tabs_scroll_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:tabMinWidth="150sp">

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/base_stats" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/evolution" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/moves" />
                        </com.google.android.material.tabs.TabLayout>
                    </HorizontalScrollView>

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/detailFragmentContainer"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tabs_scroll_view" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>