<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.PokemonDetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue_card_background">
        <ImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/pokeball_translucent"
            android:alpha="0.3"
            android:translationX="10sp"
            android:translationY="10sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:layout_margin="10sp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/like_button"
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:layout_margin="10sp"
                android:contentDescription="@string/like"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/pokemonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_bar_layout"
            android:text="@string/pokemon_name"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"/>
        <ImageView
            android:id="@+id/pokemonImage"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100sp"
            android:src="@drawable/pokeball"
            android:elevation="2sp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="3000sp"
            app:cardCornerRadius="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="250sp"
            app:cardElevation="1sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>